Closed
Bug 478784
Opened 17 years ago
Closed 17 years ago
autoscroll icon and tab preview panel are not transparent anymore
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
People
(Reporter: Peter6, Assigned: zwol)
References
Details
(Keywords: fixed1.9.1, regression)
Attachments
(2 files)
|
3.02 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
|
6.63 KB,
application/octet-stream
|
beltzner
:
approval1.9.1+
|
Details |
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090216 Minefield/3.2a1pre ID:20090216042918
repro:
open FF
press ctrl+tab
result:
the preview pane is not transparent anymore
repro 2:
open a page
middleclick to activate the autoscroll icon
result:
It's not transparent anymore
regressionwindow:
works in 20090215 nightly
fails in 20090216 nightly
Comment 1•17 years ago
|
||
regression from bug 476557 or bug 475343 ?
Anyway, All/All as I see this on OS X.
OS: Windows XP → All
Hardware: x86 → All
Updated•17 years ago
|
Component: General → Layout
Flags: blocking-firefox3.1?
Product: Firefox → Core
QA Contact: general → layout
Comment 2•17 years ago
|
||
Changing summary to mention the autoscroll icon first, as this is more relevant for 3.1.
Summary: tab preview pane and autoscroll icon are not transparent anymore → autoscroll icon and tab preview panel are not transparent anymore
Oh dear. Probably 476557
Is this bug present on 1.9.1 yet, or has the patch that caused it not landed there yet?
Flags: blocking1.9.2?
Flags: blocking1.9.1?
It hasn't landed yet.
| Assignee | ||
Comment 7•17 years ago
|
||
I can see the regression using the middle-click dingus, but ctrl-tab does not bring up any "preview pane" for me; please give more detailed instructions on how to see that.
| Reporter | ||
Comment 8•17 years ago
|
||
(In reply to comment #7)
> I can see the regression using the middle-click dingus, but ctrl-tab does not
> bring up any "preview pane" for me; please give more detailed instructions on
> how to see that.
press on the "list all tabs" button on the extreme-right of the tab bar.
| Assignee | ||
Comment 9•17 years ago
|
||
got it, thanks.
Flags: blocking1.9.1? → blocking1.9.1+
| Assignee | ||
Comment 10•17 years ago
|
||
In PresShell::Paint, if inside a transparent widget, we must use complete transparency for the backstop color *even if* the view manager has a cached non-transparent background color to suggest. This fixes both the tab preview and the middle-click-scroll wart.
Attachment #362769 -
Flags: superreview+
Attachment #362769 -
Flags: review?(roc)
Attachment #362769 -
Flags: review+
Too bad there's no real way to test this.
Keywords: checkin-needed
Whiteboard: [needs landing]
Comment 12•17 years ago
|
||
You could open a panel in a reftest, right? See e.g. attachment 356500 [details].
| Assignee | ||
Comment 13•17 years ago
|
||
(In reply to comment #12)
> You could open a panel in a reftest, right? See e.g. attachment 356500 [details].
Beyond my XUL-fu, I'm afraid.
Comment 14•17 years ago
|
||
You can just copy the XUL+JS from there and the CSS from the autoscroll icon :)
http://mxr.mozilla.org/mozilla-central/source/toolkit/themes/winstripe/global/global.css#311
Yeah, but drawWindow applied to the panel content wouldn't have caught this bug, since drawWindow takes a different painting path that ignores the "fallback background color".
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
| Reporter | ||
Comment 17•17 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20090219 Minefield/3.2a1pre ID:20090219032045
verified on windows
| Assignee | ||
Comment 18•17 years ago
|
||
This Mercurial bundle contains the patches for all of these bugs:
https://bugzilla.mozilla.org/buglist.cgi?bugidtype=include&bug_id=469170%2C473398%2C474201%2C475548%2C476557%2C478784
rediffed for the 1.9.1 branch as of right now.
Attachment #364156 -
Flags: approval1.9.1?
Updated•17 years ago
|
Attachment #364156 -
Flags: approval1.9.1? → approval1.9.1+
Comment 19•17 years ago
|
||
Comment on attachment 364156 [details]
rollup bundle for 1.9.1 branch
a191=beltzner
You need to log in
before you can comment on or make changes to this bug.
Description
•