Bug 478784. Don't use the view manager's default background color for transparent widgets. r+sr=roc